K8S/dep-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: dep-1
	labels:
		app: swiggy
spec:
	replicas: 2
	selector:
		matchLabels:
			app: swiggy
	template:
		metadata:
			labels:
				app: swiggy
		spec:
			containers:
				- name: cont-1
					image: httpd
					ports:
						-	containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: swiggy
