K8S/dep-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: dep-2
	labels:
		app: zomato
spec:
	replicas: 2
	selector:
		matchLabels:
			app: zomato
	template:
		metadata:
			labels:
				app: zomato
		spec:
			containers:
				- name: cont-2
					image: nginx
					ports:
						-	containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: zomato
