K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
	name: applications-ingress
spec:
	ingressClassName: nginx
	rules:
		- http:
			  paths:
					- path: /nginx(/|$)(.*)
						pathType: Prefix
						backend:
							service:
								name: nginx
								port:
									number: 80
					- path: /httpd(/|$)(.*)
						pathType: Prefix
						backend:
							service:
								name: httpd
								port:
									number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
